--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,9 @@
     "cookie-parser": "^1.4.6",
     "cookies": "^0.8.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.1"
+    "mongoose": "^6.1.2",
+    "universal-cookie": "^4.0.4"
   }
 }
