--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,8 +18,12 @@
     "cookies": "^0.8.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "mongoose": "^6.1.2",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "universal-cookie": "^4.0.4"
   }
 }
