--- a/frontend/hotdeals/package.json
+++ b/frontend/hotdeals/package.json
@@ -14,9 +14,11 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.14.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.1",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
